fixing z-index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -196,11 +196,8 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  z-index: 999;
   // margin: 0 auto;
-
-
   // overflow: hidden;
-  // z-index: 999;
-
 }
 
